--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,6 +5,7 @@ analyzer:
     - '**/*.freezed.dart'
   errors:
     todo: info
+    invalid_annotation_target: ignore
 linter:
   rules:
     - prefer_final_fields
