--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,15 +10,27 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.0
+  firebase_auth: ^3.2.0
+  firebase_core: ^1.10.0
   flutter:
     sdk: flutter
+  flutter_secure_storage: ^5.0.0
   get: ^4.3.8
+  idb_shim: ^2.0.1
+  intl: ^0.17.0
+  json_annotation: ^4.3.0
   pedantic: ^1.11.1
+  sqflite: ^2.0.0+4
 
 dev_dependencies:
+  build_runner: ^2.1.4
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^0.15.0+1
+  freezed_annotation: ^0.15.0
+  json_serializable: ^6.0.1
 
 flutter:
   uses-material-design: true
